--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.5"
+    "mongoose": "^5.0.6"
   }
 }
